argocd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app-get-href-from-10-websites
spec:
  replicas: 6
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/nameapp: fastapi-app-get-href-from-10-websites
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fastapi-app-get-href-from-10-websites
    spec:
      containers:
      - image: alvarolinarescabre/fastapi-app-get-href-from-10-websites:latest
        name: fastapi-app-get-href-from-10-websites
        ports:
        - containerPort: 80
