argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-app-get-href-from-10-websites
spec:
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
  selector:
    app.kubernetes.io/name: fastapi-app-get-href-from-10-websites
